# chess

.github/actions/setup-ninja/: action.yml
.github/workflows/: cmake-multi-platform.yml  main.yml
Code/: CMakeLists.txt
Code/include/: CMakeLists.txt  position.hpp
Code/source/: CMakeLists.txt  main.cpp
Code/source/board/: CMakeLists.txt  board.cpp  board.hpp
Code/source/move/: CMakeLists.txt  move.cpp  move.hpp
Code/source/piece/: CMakeLists.txt  pawn.cpp  pawn.hpp  piece.cpp  piece.hpp  rook.cpp  rook.hpp
source/: CMakeLists.txt
